@@ -1,3 +1,8 @@
+2003-06-30  Mark Salter  <msalter@redhat.com>
+
+	* include/hal_platform_setup.h: Fix CYGINT_HAL_ARM_BIGENDIAN test.
+	Remove unused ROMRAM cruft.
+
 2003-05-15  Mark Salter  <msalter@redhat.com>
 
 	* src/ixdp425_misc.c (plf_hardware_init): Set EEPROM_SCL line high.
