@@ -1,3 +1,8 @@
+2003-06-30  Mark Salter  <msalter@redhat.com>
+
+	* include/hal_platform_setup.h: Fix CYGINT_HAL_ARM_BIGENDIAN test.
+	Remove unused ROMRAM cruft.
+
 2003-04-04  Mark Salter  <msalter@redhat.com>
 
 	* include/grg.h: Add GPIO line definitions.
